--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Desktop Garfield application for testing and firts setup of hardware.",
   "main": "dist/main.js",
   "scripts": {
-  	"install": ".\\node_modules\\.bin\\electron-rebuild.cmd",
+  	"install": "echo You need to rebuild some packages for the node version that electron uses. Use 'npm run rebuild-win' on Windows or 'npm run rebuild-unix' on Unix.",
+    "rebuild-win" : ".\\node_modules\\.bin\\electron-rebuild.cmd",
+    "rebuild-unix" : "./node_modules/.bin/electron-rebuild",
     "start": "electron .",
     "build": "rimraf dist && tsc",
     "build-start": "npm run build && npm start"
