--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Desktop Garfield application for testing and firts setup of hardware.",
   "main": "dist/main.js",
   "scripts": {
-  	"install": "echo You need to rebuild some packages for the node version that electron uses. Use 'npm run rebuild-win' on Windows or 'npm run rebuild-unix' on Unix.",
-    "rebuild-win" : ".\\node_modules\\.bin\\electron-rebuild.cmd",
-    "rebuild-unix" : "./node_modules/.bin/electron-rebuild",
+    "install": "echo You need to rebuild some packages for the node version that electron uses. Use 'npm run rebuild-win' on Windows or 'npm run rebuild-unix' on Unix.",
+    "rebuild-win": ".\\node_modules\\.bin\\electron-rebuild.cmd",
+    "rebuild-unix": "./node_modules/.bin/electron-rebuild",
     "start": "electron .",
     "build": "rimraf dist && tsc",
     "build-start": "npm run build && npm start"
@@ -18,14 +18,17 @@
   "author": "Alexandr Tylš",
   "license": "UNLICENSED",
   "devDependencies": {
-    "electron-rebuild": "^1.6.0"
+    "electron-rebuild": "^1.6.0",
+    "commonjs": "0.0.1"
   },
   "dependencies": {
     "electron": "~1.7.5",
     "logger": "git+ssh://git@github.com:ByzanceIoT/js-logger.git#v1.2.1",
     "request": "^2.81.0",
+    "request-promise": "^4.2.1",
+    "rxjs": "^5.4.3",
+    "serialport": "5.0.0",
     "typescript": "2.4.2",
-    "usb": "git+ssh://git@github.com:tessel/node-usb.git#1.3.0",
-    "serialport": "5.0.0"
+    "usb": "git+ssh://git@github.com:tessel/node-usb.git#1.3.0"
   }
 }
