--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "drivelist": "^5.1.8",
     "electron": "~1.7.5",
     "logger": "git+ssh://git@github.com:ByzanceIoT/js-logger.git#v1.2.1",
+    "promise": "^8.0.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "rxjs": "^5.4.3",
     "serialport": "5.0.0",
     "typescript": "2.4.2",
-    "usb": "git+ssh://git@github.com:tessel/node-usb.git#1.3.0"
+    "usb": "git+ssh://git@github.com:tessel/node-usb.git#1.3.0",
+    "ws": "^3.1.0"
   }
 }
