--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "./src/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "distributions"
   ],
   "lib": [
     "es6"
