update git ignore

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "keywords": [
     "garfield"
   ],
-  "author": "Byzance",
+  "author": "Alexandr Tylš",
   "license": "UNLICENSED",
   "devDependencies": {
     "commonjs": "0.0.1",
