--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "garfield",
-  "version": "1.1.0",
+  "version": "1.1.6",
   "description": "Desktop Garfield application for testing and firts setup of hardware.",
   "main": "dist/main.js",
   "scripts": {
@@ -24,13 +24,16 @@
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^9.0.1",
     "electron-rebuild": "^1.6.0",
+    "electron-windows-installer": "^1.7.8",
     "electron-winstaller": "^2.6.3",
+    "prompt": "^1.0.0",
     "tslint": "^4.3.1",
     "tslint-eslint-rules": "^3.2.3"
   },
   "dependencies": {
     "drivelist": "^5.2.4",
     "electron": "~1.7.5",
+    "electron-is-dev": "^0.3.0",
     "logger": "git+ssh://git@github.com:ByzanceIoT/js-logger.git#v1.2.1",
     "promise": "^8.0.1",
     "request": "^2.81.0",
