--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
   },
   "dependencies": {
     "drivelist": "^5.2.4",
-    "electron": "~1.7.5",
+    "electron": "^1.7.9",
     "electron-is-dev": "^0.3.0",
-    "logger": "git+ssh://git@github.com:ByzanceIoT/js-logger.git#v1.2.1",
+    "logger": "git+ssh://git@github.com/ByzanceIoT/js-logger.git#v1.2.1",
     "promise": "^8.0.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.2",
     "serialport": "5.0.0",
     "typescript": "2.4.2",
-    "usb": "git+ssh://git@github.com:tessel/node-usb.git#1.3.0",
-    "ws": "^3.1.0"
+    "usb": "git+ssh://git@github.com/tessel/node-usb.git#1.3.0",
+    "ws": "^3.3.1"
   }
 }
