--- a/package.json
+++ b/package.json
@@ -20,30 +20,30 @@
   "author": "Alexandr Tylš",
   "license": "UNLICENSED",
   "devDependencies": {
-    "commonjs": "0.0.1",
+    "@types/serialport": "^6.0.1",
+    "commonjs": "^0.0.1",
+    "electron": "^1.8.4",
     "electron-installer-dmg": "^0.2.1",
-    "electron-packager": "^9.0.1",
-    "electron-rebuild": "^1.6.0",
+    "electron-packager": "^11.2.0",
+    "electron-rebuild": "^1.7.3",
     "electron-windows-installer": "^1.7.8",
-    "electron-winstaller": "^2.6.3",
+    "electron-winstaller": "^2.6.4",
     "prompt": "^1.0.0",
     "tslint": "^4.3.1",
     "tslint-eslint-rules": "^3.2.3"
   },
   "dependencies": {
-    "crc": "^3.5.0",
-    "drivelist": "^5.2.7",
-    "electron": "1.7.5",
+    "drivelist": "^5.2.12",
     "electron-is-dev": "^0.3.0",
     "electron-notify": "^0.1.0",
     "logger": "git+ssh://git@github.com/ByzanceIoT/js-logger.git#v1.2.1",
     "promise": "^8.0.1",
-    "request": "^2.81.0",
+    "request": "^2.85.0",
     "request-promise": "^4.2.1",
-    "rxjs": "^5.5.2",
-    "serialport": "6.0.4",
+    "rxjs": "^5.5.7",
+    "serialport": "^6.1.1",
     "typescript": "2.4.2",
     "usb": "git+ssh://git@github.com/tessel/node-usb.git#1.3.0",
-    "ws": "^3.3.2"
+    "ws": "^3.3.3"
   }
 }
